@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-20T12:28:07Z",
+  "timestamp" : "2025-07-21T01:19:34Z",
   "count_outdated" : 5157,
   "uniques_outdated" : 2792,
-  "count" : 5197,
-  "uniques" : 2828,
+  "count" : 5198,
+  "uniques" : 2829,
   "clones" : [
     {
       "timestamp": "2025-07-07T00:00:00Z",
@@ -115,6 +115,15 @@
     },
     {
       "timestamp": "2025-07-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
