@@ -1,5 +1,5 @@
 {
-  "count": 40,
+  "count": 41,
   "uniques": 20,
   "clones": [
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2025-07-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
